
Package org.springframework.osgi.context
* added reporting of Errors raised during delegated refresh in AbstractDelegatedExecutionApplicationContext

Package org.springframework.osgi.extender
* fixed bug related to enabling Spring-DM annotation depedency processing
* improved annotation injection processing
* improved extender configuration thread-safety

Package org.springframework.osgi.service
* changed the proxying classloader strategy to address package dependency visibility
* fixed usage of incorrect class loader for imported services with client thread context class loader management
* fixed intermittent deadlock that appeared in some cases betweem importers and exporters during shutdown

Package org.springframework.osgi.io
* fixed classpath pattern matching on certain resources when the default Bundle-ClassPath entry (.) is not specified

Package org.springframework.osgi.web
* improved web extender configuration thread-safety
* improved web extender initialization by using an asynch model for cases with out-of-order dependencies


Changes in version 1.1.1 (2008-07-29)
-------------------------------------

Package org.springframework.osgi.io
* fixed incorrect parsing of headers specifying version ranges
* improved handling of Require-Bundle header (with regards to quotes and ranges)
* fixed handling of required bundles that do not export packages
* fixed premature failure when searching missing resources in multiple paths

Package org.springframework.osgi.mock
* improved dependency between MockBundleContext and the bundle it returns
* added OSGi R4.1 start/stop signatures to MockBundle
* added OSGi R4.1 compareTo contract to MockServiceReference
* improved local maven artifact search by adding groupId filtering

Package org.springframework.osgi.service
* fixed potential NPE when comparing managed service references
* improved thread safety for the managed service reference returned to the user

Package org.springframework.osgi.web